[package]
authors = ["dbr <dbr.onix@gmail.com>"]
edition = "2018"
name = "vidl"
version = "0.1.0"

[dependencies]
anyhow = "1"
attohttpc = "0.24"
chrono = "0.4"
clap = "2.33.3"
fern = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
threadpool = "1.8"
directories = "2.0"
rouille = "3.6.1"
lazy_static = "1.4"
thiserror = "1.0"
askama = "0.8"
yt-chanvids = "1.3.0"
ratelimit_meter = "5.0.0"

[patch.crates-io]
# Fork'd version of https://github.com/daniel-araujo/yt-chanvids 
yt-chanvids = { git = "https://github.com/dbr/yt-chanvids", rev = '9be0f8ffe44937099c822c917d78346b15e047f5' }

[dev-dependencies]
mockito = "0"
env_logger = "0.7"

[dependencies.rusqlite]
features = ["chrono", "bundled"]
version = "0.21"
